# EasyLocalDatabase

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: pypirelease.yml  pythonPush.yml
ezlocaldb/: __init__.py
tests/: test__init__.py
