[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ezlocaldatabase"
authors = [
    {name = "Sterling Collins", email = "sterlingcollins@gmail.com"},
]
description = "Easy SQL databases for no-sweat persistence"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["Database", "SQL", "Persistence"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "appdirs",
    "sqlalchemy",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["black","pytest","pre-commit"]

[project.scripts]
