[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ezlocaldb"
authors = [
    {name = "Sterling Collins", email = "sterlingcollins@gmail.com"},
]
description = "Easy local SQL databases for no-sweat persistence"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["Database", "SQL", "Persistence"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    ]
dependencies = [
    "appdirs",
    "sqlalchemy",
]

[project.optional-dependencies]
dev = ["black","pytest","pre-commit", "bumpver", "tox", "mypy"]

[project.scripts]

[tool.bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"README.md" = [
    "^Version {version}$",
]
